Use constructor newInstance